--- a/1-5 file/power2.html
+++ b/1-5 file/power2.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <style>
         /* class tag inline  id a sob kichu teke impotant a pawer best  */
+
+        /* i need visit css spacapicty */
         
         h1 {
             color: cyan !important;
