--- a/class8/bootstrap css and js/index.html
+++ b/class8/bootstrap css and js/index.html
@@ -57,7 +57,7 @@
             <li data-target="#carouselExampleCaptions " data-slide-to="2 "></li>
         </ol>
         <div class="carousel-inner ">
-            <div class="carousel-item active ">
+            <div class="carousel-item  ">
                 <img src="image/friond.JPG " class="d-block w-100 " alt="... ">
                 <div class="carousel-caption d-none d-md-block ">
                     <h5>First slide label</h5>
