--- a/class9/index.html
+++ b/class9/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <!-- this is start navbar section  -->
-    <div class="container ">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <div class="container opore">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light  ">
             <img src="images/logo.png" alt="">
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,16 +22,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav " style="text-align: center;">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">shoes</a>
+                        <a class="nav-link" href="#shoes">shoes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">backpack</a>
+                        <a class="nav-link" href="#backpack">backpack</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">subcribe</a>
+                        <a class="nav-link " href="#subcribe" tabindex="-1" aria-disabled="true">subcribe</a>
                     </li>
                 </ul>
             </div>
@@ -40,7 +40,7 @@
     <!-- this is end for navbar section  -->
 
     <!-- start carousel item  -->
-    <div class="container">
+    <div class="container" id="home">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -120,19 +120,19 @@
             <div class="col-md-4 ">
                 <div class="watch row align-items-center ">
                     <h1 class="col-md-5">wacth</h1>
-                    <img src="images/categories/watch.png" alt=""></div>
+                    <img src="images/categories/watch.png" alt="" class="col-md-7"></div>
             </div>
             <div class="col-md-4 ">
-                <div class="bag row align-items-center">
-                    <h1 class="col-md-5">bag</h1>
-                    <img src="images/categories/bag.png" alt="">
-                </div>
+                <div class="bag1 row align-items-center ">
+                    <h1 class="col-md-5">shoes</h1>
+                    <img src="images/categories/bag.png" alt="" class="col-md-7"></div>
             </div>
             <div class="col-md-4 ">
                 <div class="shoes row align-items-center ">
                     <h1 class="col-md-5">shoes</h1>
-                    <img src="images/categories/shoes.png" alt=""></div>
+                    <img src="images/categories/shoes.png" alt="" class="col-md-7"></div>
             </div>
+
         </div>
 
     </div>
@@ -140,7 +140,7 @@
 
     <!-- start 2nd shoes section  -->
 
-    <div class="container">
+    <div class="container" id="shoes">
         <h1>Shoes</h1>
         <div class="row ">
             <div class="col-md-4  ">
@@ -171,36 +171,41 @@
 
     <!-- staert bag items  -->
 
-    <div class="container">
+    <div class="container" id="backpack">
         <h1>Backpack</h1>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="bag">
-                    <img src="images/bags/bag-1.png" class="w-100" alt="">
-                    <h1>Red Laltu Bag
-                    </h1>
-                    <h1>$120</h1>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer</p>
-                    <a href="#" class="btn">Buy NOw</a>
+        <div class="card-deck">
+            <div class="card ami">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Red Laltu Bag</h5>
+                    <h2>$20</h2>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer last">
+                    <button class="btn">buy now >></button>
+                </div>
+            </div>
+            <div class="card ami">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Blue Niltu Bag</h5>
+                    <h2>$320</h2>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content..</p>
+                </div>
+                <div class="card-footer last">
+                    <button class="btn">buy now >></button>
+                </div>
+            </div>
+            <div class="card ami">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Bllck Niltu Bag</h5>
+                    <h2>$169</h2>
 
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action..</p>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="bag">
-                    <img src="images/bags/bag-2.png" class="w-100" alt="">
-                    <h1>Blue Niltu Bag</h1>
-                    <h1>$320</h1>
-                    <p class="card-text">his card has supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn">Buy Now</a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="bag">
-                    <img src="images/bags/bag-3.png" class="w-100" alt="">
-                    <h1>Black Kaltu bag</h1>
-                    <h1>$155</h1>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    <a href="#" class="btn">Buy NOw</a>
+                <div class="card-footer last">
+                    <button class="btn">buy now >></button>
                 </div>
             </div>
         </div>
@@ -210,45 +215,22 @@
 
     <!--end bag items  -->
     <!-- anather bag section  -->
-    <div class="container">
-        <div class="card-group">
-            <div class=" col-md-4">
-                <div class="bag"> <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                    <div class="footer">
-                        <a href="#" class="btn ">Buy NOw</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="bag"><img src="images/bags/bag-2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                    <div class="footer">
-                        <a href="#" class="btn">Buy NOw</a>
-                    </div>
-                </div>
-            </div>
-            <div class=" col-md-4 ">
-                <div class="bag"> <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    </div>
-                    <div class="footer">
-                        <a href="#" class="btn ">Buy NOw</a>
-                    </div>
-                </div>
 
-            </div>
-        </div>
+
+    <!-- subcribe section  -->
+    <div class="container footer-bg   d-flex justify-content-center align-items-center" id="subcribe">
+
+        <div class="">
+            <h1>LET'S STAY IN TOUCH</h1>
+            <h5>Get updates on sales, specials and more</h5>
+            <input class="form-control" type="text ">
+            <button class="btn">SUBMIT</button></div>
+
     </div>
-    <!-- anather bag section  -->
+    <!-- subcribe section  -->
+    <!-- this footer tag -->
+    <p style="font-size: 15px; text-align: center; margin-bottom: 5px;">&COPY; 2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+    <!-- this footer tag -->
 
     <!-- this java script link on here  -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
